--- a/accounting/accounting/doctype/items/templates/items_row.html
+++ b/accounting/accounting/doctype/items/templates/items_row.html
@@ -1,4 +1,12 @@
-<div>
-	<a href="{{ doc.route }}">{{ doc.title or doc.name }}</a>
+<div class="py-8 row">
+  <div class="col-sm-1">
+    <img src="{{ doc.image }}" alt="{{ doc.name }}">
+  </div>
+  <div class="col">
+    <a href="{{ doc.route }}">{{ doc.title or doc.name }}</a>
+    <p> Price: {{ doc.price_per_unit }}</p>
+  </div>
 </div>
+
+
 <!-- this is a sample default list template -->
